Dapper implementation in web api

--- a/CoreWebApiSuperHero/appsettings.json
+++ b/CoreWebApiSuperHero/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=LAPTOP-QPGHSJBD;Database=CoreWebApiSuperHero;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+        //"DefaultConnection": "Server=LAPTOP-QPGHSJBD;Database=CoreWebApiSuperHero;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
         "CollegeAppDBConnection": "Server=LAPTOP-QPGHSJBD;Database=CollegeDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
     "Logging": { //Types of logging configuration .
